--- a/render.yaml
+++ b/render.yaml
@@ -12,3 +12,7 @@ services:
         value: "testvocacional44@gmail.com"
       - key: MAIL_PASS
         value: "qzuwfvnfnybutjfm"
+      - key: DATABASE_URL
+        fromDatabase:
+          name: test-vocacional-db
+          property: connectionString
