--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: test-vocacional
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn --timeout 120 app:app
+    startCommand: gunicorn app:app
     plan: free
     envVars:
       - key: SECRET_KEY
